--- a/package.json
+++ b/package.json
@@ -21,31 +21,31 @@
     "synth-workspace": "pnpm exec projen"
   },
   "devDependencies": {
-    "@aws/pdk": "^0.23.49",
+    "@aws/pdk": "0.23.49",
     "@types/node": "^18",
     "@typescript-eslint/eslint-plugin": "^7",
     "@typescript-eslint/parser": "^7",
     "constructs": "^10.0.0",
     "eslint": "^8",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-import-resolver-typescript": "^3.6.3",
-    "eslint-plugin-import": "^2.30.0",
-    "eslint-plugin-prettier": "^5.2.1",
-    "npm-check-updates": "^17.1.3",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-import-resolver-typescript": "3.6.3",
+    "eslint-plugin-import": "2.30.0",
+    "eslint-plugin-prettier": "5.2.1",
+    "npm-check-updates": "17.1.3",
     "nx": "19.0.0",
-    "prettier": "^3.3.3",
+    "prettier": "3.3.3",
     "projen": "^0.82.8",
     "syncpack": "^13",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.6.2"
+    "ts-node": "10.9.2",
+    "typescript": "5.6.2"
   },
   "peerDependencies": {
     "nx": "^19"
   },
   "dependencies": {
     "@aws-cdk/aws-cognito-identitypool-alpha": "latest",
-    "aws-cdk-lib": "^2.160.0",
-    "cdk-nag": "^2.28.195"
+    "aws-cdk-lib": "2.160.0",
+    "cdk-nag": "2.28.195"
   },
   "pnpm": {
     "overrides": {
