--- a/packages/infra/package.json
+++ b/packages/infra/package.json
@@ -22,28 +22,28 @@
     "watch": "npx projen watch"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.13",
+    "@types/jest": "29.5.13",
     "@types/node": "^18",
     "@typescript-eslint/eslint-plugin": "^7",
     "@typescript-eslint/parser": "^7",
     "aws-cdk": "^2.1.0",
-    "esbuild": "^0.24.0",
+    "esbuild": "0.24.0",
     "eslint": "^8",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-import-resolver-typescript": "^3.6.3",
-    "eslint-plugin-import": "^2.30.0",
-    "eslint-plugin-prettier": "^5.2.1",
-    "jest": "^29.7.0",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-import-resolver-typescript": "3.6.3",
+    "eslint-plugin-import": "2.30.0",
+    "eslint-plugin-prettier": "5.2.1",
+    "jest": "29.7.0",
     "jest-junit": "^15",
-    "prettier": "^3.3.3",
-    "ts-jest": "^29.2.5",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.6.2"
+    "prettier": "3.3.3",
+    "ts-jest": "29.2.5",
+    "ts-node": "10.9.2",
+    "typescript": "5.6.2"
   },
   "dependencies": {
-    "@aws/pdk": "^0.23.48",
+    "@aws/pdk": "0.23.49",
     "aws-cdk-lib": "^2.1.0",
-    "cdk-nag": "^2.28.195",
+    "cdk-nag": "2.28.195",
     "constructs": "^10.0.5"
   },
   "license": "Apache-2.0",
