--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -24,18 +24,24 @@
     "@types/react-dom": "18.3.0",
     "@typescript-eslint/eslint-plugin": "^7",
     "@typescript-eslint/parser": "^7",
+    "autoprefixer": "^10.4.20",
+    "cva": "npm:class-variance-authority",
     "eslint": "^8",
     "eslint-config-prettier": "9.1.0",
     "eslint-import-resolver-typescript": "3.6.3",
     "eslint-plugin-import": "2.30.0",
     "eslint-plugin-prettier": "5.2.1",
+    "postcss": "^8.4.47",
     "prettier": "3.3.3",
     "react-scripts": "^5",
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss": "^3.4.13",
     "typescript": "^4.0.3"
   },
   "dependencies": {
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-router-dom": "^6.26.2",
     "web-vitals": "4.2.3"
   },
   "license": "Apache-2.0",
