Fix website project configuration

--- a/packages/website/.projen/tasks.json
+++ b/packages/website/.projen/tasks.json
@@ -26,7 +26,7 @@
       "description": "Only compile",
       "steps": [
         {
-          "exec": "react-scripts build"
+          "exec": "craco build"
         }
       ]
     },
@@ -39,17 +39,7 @@
       "description": "Starts the react application",
       "steps": [
         {
-          "exec": "npx react-scripts start & npx tailwindcss -i ./src/styles/main.css -o ./src/index.css --watch"
-        }
-      ]
-    },
-    "eslint": {
-      "name": "eslint",
-      "description": "Runs eslint against the codebase",
-      "steps": [
-        {
-          "exec": "eslint --ext .ts,.tsx --fix --no-error-on-unmatched-pattern $@ src test build-tools",
-          "receiveArgs": true
+          "exec": "craco start & npx tailwindcss -i ./src/styles/main.css -o ./src/index.css --watch"
         }
       ]
     },
@@ -92,10 +82,7 @@
       "description": "Run tests",
       "steps": [
         {
-          "spawn": "eslint"
-        },
-        {
-          "exec": "react-scripts test --watchAll=false"
+          "exec": "craco test --watchAll=false --passWithNoTests"
         }
       ]
     },
@@ -107,13 +94,13 @@
       },
       "steps": [
         {
-          "exec": "pnpm dlx npm-check-updates@16 --upgrade --target=minor --peer --dep=dev,peer,prod,optional --filter=@testing-library/jest-dom,@testing-library/react,@testing-library/user-event,@types/jest,@types/react,@types/react-dom,autoprefixer,eslint-config-prettier,eslint-import-resolver-typescript,eslint-plugin-import,eslint-plugin-prettier,postcss,prettier,tailwind-merge,tailwindcss,react,react-dom,react-router-dom,web-vitals"
+          "exec": "pnpm dlx npm-check-updates@16 --upgrade --target=minor --peer --dep=dev,peer,prod,optional --filter=@craco/craco,@craco/types,@eslint/js,@testing-library/jest-dom,@testing-library/react,@testing-library/user-event,@types/eslint__js,@types/jest,@types/react,@types/react-dom,autoprefixer,eslint,postcss,prettier,tailwindcss,typescript-eslint,class-variance-authority,clsx,lucide-react,react,react-dom,react-router-dom,tailwind-merge,tailwindcss-animate,web-vitals"
         },
         {
           "exec": "pnpm i --no-frozen-lockfile"
         },
         {
-          "exec": "pnpm update @testing-library/jest-dom @testing-library/react @testing-library/user-event @types/jest @types/node @types/react @types/react-dom @typescript-eslint/eslint-plugin @typescript-eslint/parser autoprefixer cva eslint-config-prettier eslint-import-resolver-typescript eslint-plugin-import eslint-plugin-prettier eslint postcss prettier react-scripts tailwind-merge tailwindcss typescript react react-dom react-router-dom web-vitals"
+          "exec": "pnpm update @craco/craco @craco/types @eslint/js @testing-library/jest-dom @testing-library/react @testing-library/user-event @types/eslint__js @types/jest @types/node @types/react @types/react-dom autoprefixer eslint postcss prettier react-scripts tailwindcss typescript-eslint typescript class-variance-authority clsx lucide-react react react-dom react-router-dom tailwind-merge tailwindcss-animate web-vitals"
         },
         {
           "exec": "npx projen"
