--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -5,7 +5,6 @@
     "compile": "npx projen compile",
     "default": "npx projen default",
     "dev": "npx projen dev",
-    "eslint": "npx projen eslint",
     "package": "npx projen package",
     "post-compile": "npx projen post-compile",
     "post-upgrade": "npx projen post-upgrade",
@@ -15,33 +14,35 @@
     "watch": "npx projen watch"
   },
   "devDependencies": {
+    "@craco/craco": "^7.1.0",
+    "@craco/types": "^7.1.0",
+    "@eslint/js": "^8.57.1",
     "@testing-library/jest-dom": "6.5.0",
     "@testing-library/react": "16.0.1",
     "@testing-library/user-event": "14.5.2",
+    "@types/eslint__js": "^8.42.3",
     "@types/jest": "29.5.13",
-    "@types/node": "^18",
+    "@types/node": "^18.19.53",
     "@types/react": "18.3.9",
     "@types/react-dom": "18.3.0",
-    "@typescript-eslint/eslint-plugin": "^7",
-    "@typescript-eslint/parser": "^7",
     "autoprefixer": "^10.4.20",
-    "cva": "npm:class-variance-authority",
-    "eslint": "^8",
-    "eslint-config-prettier": "9.1.0",
-    "eslint-import-resolver-typescript": "3.6.3",
-    "eslint-plugin-import": "2.30.0",
-    "eslint-plugin-prettier": "5.2.1",
+    "eslint": "^8.57.1",
     "postcss": "^8.4.47",
     "prettier": "3.3.3",
-    "react-scripts": "^5",
-    "tailwind-merge": "^2.5.2",
+    "react-scripts": "^5.0.1",
     "tailwindcss": "^3.4.13",
-    "typescript": "^4.0.3"
+    "typescript": "^4.9.5",
+    "typescript-eslint": "^8.7.0"
   },
   "dependencies": {
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.446.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-router-dom": "^6.26.2",
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7",
     "web-vitals": "4.2.3"
   },
   "license": "Apache-2.0",
