--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -14,35 +14,37 @@
     "watch": "npx projen watch"
   },
   "devDependencies": {
-    "@craco/craco": "^7.1.0",
-    "@craco/types": "^7.1.0",
-    "@eslint/js": "^8.57.1",
+    "@craco/craco": "7.1.0",
+    "@craco/types": "7.1.0",
+    "@eslint/js": "8.57.1",
     "@testing-library/jest-dom": "6.5.0",
     "@testing-library/react": "16.0.1",
     "@testing-library/user-event": "14.5.2",
-    "@types/eslint__js": "^8.42.3",
+    "@types/eslint__js": "8.42.3",
     "@types/jest": "29.5.13",
-    "@types/node": "^18.19.53",
-    "@types/react": "18.3.9",
+    "@types/node": "^18",
+    "@types/react": "18.3.10",
     "@types/react-dom": "18.3.0",
-    "autoprefixer": "^10.4.20",
-    "eslint": "^8.57.1",
-    "postcss": "^8.4.47",
+    "autoprefixer": "10.4.20",
+    "eslint": "8.57.1",
+    "globals": "13.24.0",
+    "postcss": "8.4.47",
+    "postcss-import": "15.1.0",
     "prettier": "3.3.3",
-    "react-scripts": "^5.0.1",
-    "tailwindcss": "^3.4.13",
-    "typescript": "^4.9.5",
-    "typescript-eslint": "^8.7.0"
+    "react-scripts": "^5",
+    "tailwindcss": "3.4.13",
+    "tailwindcss-animate": "1.0.7",
+    "typescript": "^4.0.3",
+    "typescript-eslint": "8.7.0"
   },
   "dependencies": {
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.1",
-    "lucide-react": "^0.446.0",
+    "class-variance-authority": "0.7.0",
+    "clsx": "2.1.1",
+    "lucide-react": "0.446.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-router-dom": "^6.26.2",
-    "tailwind-merge": "^2.5.2",
-    "tailwindcss-animate": "^1.0.7",
+    "react-router-dom": "6.26.2",
+    "tailwind-merge": "2.5.2",
     "web-vitals": "4.2.3"
   },
   "license": "Apache-2.0",
