--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -26,6 +26,7 @@
     "@types/react": "18.3.10",
     "@types/react-dom": "18.3.0",
     "autoprefixer": "10.4.20",
+    "craco-esbuild": "0.6.1",
     "eslint": "8.57.1",
     "globals": "13.24.0",
     "postcss": "8.4.47",
