--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -16,36 +16,36 @@
     "upgrade": "npx projen upgrade"
   },
   "devDependencies": {
-    "@eslint/js": "^8.57.1",
-    "@types/react": "^18.3.10",
-    "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react": "^4.3.2",
-    "autoprefixer": "^10.4.20",
-    "eslint": "^8.57.1",
-    "eslint-plugin-react-hooks": "^4.6.2",
-    "eslint-plugin-react-refresh": "^0.4.12",
-    "globals": "^13.24.0",
-    "jest": "^29.7.0",
+    "@eslint/js": "8.57.1",
+    "@types/react": "18.3.11",
+    "@types/react-dom": "18.3.0",
+    "@vitejs/plugin-react": "4.3.2",
+    "autoprefixer": "10.4.20",
+    "eslint": "8.57.1",
+    "eslint-plugin-react-hooks": "4.6.2",
+    "eslint-plugin-react-refresh": "0.4.12",
+    "globals": "13.24.0",
+    "jest": "29.7.0",
     "jest-junit": "^15",
-    "postcss": "^8.4.47",
-    "postcss-import": "^15.1.0",
-    "prettier": "^3.3.3",
-    "tailwindcss": "^3.4.13",
-    "tailwindcss-animate": "^1.0.7",
-    "typescript": "^4.9.5",
-    "typescript-eslint": "^8.7.0",
-    "vite": "^5.4.8",
-    "vite-tsconfig-paths": "^5.0.1"
+    "postcss": "8.4.47",
+    "postcss-import": "15.1.0",
+    "prettier": "3.3.3",
+    "tailwindcss": "3.4.13",
+    "tailwindcss-animate": "1.0.7",
+    "typescript": "5.6.2",
+    "typescript-eslint": "8.8.0",
+    "vite": "5.4.8",
+    "vite-tsconfig-paths": "5.0.1"
   },
   "dependencies": {
-    "@radix-ui/react-slot": "^1.1.0",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.1",
-    "lucide-react": "^0.446.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.2",
-    "tailwind-merge": "^2.5.2"
+    "@radix-ui/react-slot": "1.1.0",
+    "class-variance-authority": "0.7.0",
+    "clsx": "2.1.1",
+    "lucide-react": "0.447.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-router-dom": "6.26.2",
+    "tailwind-merge": "2.5.3"
   },
   "main": "lib/index.js",
   "license": "Apache-2.0",
