--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -19,6 +19,7 @@
     "@eslint/js": "8.57.1",
     "@types/react": "18.3.11",
     "@types/react-dom": "18.3.0",
+    "@types/react-router-bootstrap": "^0.26.6",
     "@vitejs/plugin-react": "4.3.2",
     "autoprefixer": "10.4.20",
     "eslint": "8.57.1",
@@ -39,11 +40,14 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "1.1.0",
+    "bootstrap": "^5.3.3",
     "class-variance-authority": "0.7.0",
     "clsx": "2.1.1",
     "lucide-react": "0.447.0",
     "react": "18.3.1",
+    "react-bootstrap": "^2.10.5",
     "react-dom": "18.3.1",
+    "react-router-bootstrap": "^0.26.3",
     "react-router-dom": "6.26.2",
     "tailwind-merge": "2.5.3"
   },
