--- a/packages/website/public/manifest.json
+++ b/packages/website/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "svantenilsson.dev",
+  "name": "Developer website for Svante Nilsson",
   "icons": [
     {
       "src": "favicon.ico",
